# discord_bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.json  config.toml  docker-compose.yml
src/: commands.rs  config.rs  database.rs  loops.rs  main.rs
src/commands/: error.rs  gotd.rs  hidden_ability.rs  integration_test.rs  ping.rs  poe.rs  secret.rs  test_feature.rs
src/loops/: gotd_loop.rs  status.rs
src/services/: mod.rs  pokeapi.rs
