[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
regex = "1"
claim = "0.5"
openssl = { version = "0.10.35", features = ["vendored"] }
rand = "0.8.5"
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = { version = "0.4" }
url = { version = "2.5.7" }