[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
regex = "1"
claim = "0.5"
rand = "0.8.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = { version = "0.4" }
url = { version = "2.5.7" }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
async-trait = "0.1"
thiserror = "2.0"